--- a/bitwarden_license/bit-web/src/app/secrets-manager/service-accounts/projects/service-account-projects.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/service-accounts/projects/service-account-projects.component.html
@@ -6,7 +6,7 @@
     [rows]="rows$ | async"
     granteeType="projects"
     [label]="'projects' | i18n"
-    [hint]="'newSaSelectAccess' | i18n"
+    [hint]="'newMaSelectAccess' | i18n"
     [columnTitle]="'projects' | i18n"
     [emptyMessage]="'machineAccountEmptyProjectAccessPolicies' | i18n"
     (onCreateAccessPolicies)="handleCreateAccessPolicies($event)"
