Remove BulkCollectionAccess flag

--- a/apps/web/src/app/vault/components/vault-items/vault-items.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-items.component.html
@@ -38,7 +38,7 @@
               {{ "moveSelected" | i18n }}
             </button>
             <button
-              *ngIf="showAdminActions && showBulkEditCollectionAccess"
+              *ngIf="showAdminActions"
               type="button"
               bitMenuItem
               (click)="bulkEditCollectionAccess()"
