Revert "Remove BulkCollectionAccess flag"
This reverts commit 063e275cba283977e1407d744c21fafdb7b63c75.

--- a/apps/web/src/app/vault/org-vault/vault.component.html
+++ b/apps/web/src/app/vault/org-vault/vault.component.html
@@ -51,6 +51,9 @@
       [cloneableOrganizationCiphers]="true"
       [showAdminActions]="true"
       (onEvent)="onVaultItemsEvent($event)"
+      [showBulkEditCollectionAccess]="
+        (showBulkEditCollectionAccess$ | async) && organization?.flexibleCollections
+      "
       [showBulkAddToCollections]="organization?.flexibleCollections"
       [viewingOrgVault]="true"
     >
