--- a/apps/web/src/app/vault/individual-vault/vault.component.html
+++ b/apps/web/src/app/vault/individual-vault/vault.component.html
@@ -50,6 +50,7 @@
       [cloneableOrganizationCiphers]="false"
       [showAdminActions]="false"
       (onEvent)="onVaultItemsEvent($event)"
+      [showBulkEditCollectionAccess]="showBulkCollectionAccess$ | async"
     >
     </app-vault-items>
     <div
