fix missing color

--- a/libs/components/src/tw-theme.css
+++ b/libs/components/src/tw-theme.css
@@ -32,7 +32,7 @@
   --color-info-600: 16 148 157;
   --color-info-700: 12 105 111;
 
-  --color-warning-600: 214 129;
+  --color-warning-600: 214 129 0;
   --color-warning-700: 138 82 0;
 
   --color-danger-600: 184 0 23;
