Add feature flag

--- a/apps/web/src/app/layouts/header/web-header.component.html
+++ b/apps/web/src/app/layouts/header/web-header.component.html
@@ -1,7 +1,9 @@
 <bit-banner
   class="-tw-m-6 tw-flex tw-flex-col tw-pb-6"
   (onClose)="webUnassignedItemsBannerService.hideBanner()"
-  *ngIf="webUnassignedItemsBannerService.showBanner$ | async"
+  *ngIf="
+    (unassignedItemsBannerEnabled$ | async) && (webUnassignedItemsBannerService.showBanner$ | async)
+  "
 >
   {{ "unassignedItemsBanner" | i18n }}
   <a
