--- a/libs/components/src/tw-theme.css
+++ b/libs/components/src/tw-theme.css
@@ -58,38 +58,42 @@
 .theme_dark {
   --color-transparent-hover: rgb(255 255 255 / 0.12);
 
-  --color-background: 31 36 46;
-  --color-background-alt: 22 28 38;
+  --color-background: 32 39 51;
+  --color-background-alt: 18 26 39;
   --color-background-alt2: 47 52 61;
   --color-background-alt3: 47 52 61;
   --color-background-alt4: 16 18 21;
 
-  --color-primary-300: 23 93 220;
-  --color-primary-600: 106 153 240;
-  --color-primary-700: 180 204 249;
+  --color-primary-100: 8 31 73;
+  --color-primary-300: 19 71 165;
+  --color-primary-500: 54 117 232;
+  --color-primary-600: 99 148 237;
+  --color-primary-700: 145 180 242;
 
-  --color-secondary-100: 47 52 61;
-  --color-secondary-300: 110 118 137;
-  --color-secondary-600: 186 192 206;
-  --color-secondary-700: 255 255 255;
+  --color-secondary-100: 48 57 70;
+  --color-secondary-300: 82 91 106;
+  --color-secondary-500: 121 128 142;
+  --color-secondary-600: 143 152 166;
+  --color-secondary-700: 158 167 181;
 
-  --color-success-600: 82 224 124;
-  --color-success-700: 168 239 190;
+  --color-success-600: 107 241 120;
+  --color-success-700: 152 245 161;
 
-  --color-danger-600: 255 141 133;
-  --color-danger-700: 255 191 187;
+  --color-danger-600: 255 82 103;
+  --color-danger-700: 255 133 148;
 
-  --color-warning-600: 255 235 102;
-  --color-warning-700: 255 245 179;
+  --color-warning-600: 255 187 87;
+  --color-warning-700: 255 207 138;
 
-  --color-info-600: 164 176 198;
-  --color-info-700: 209 215 226;
+  --color-info-600: 89 228 238;
+  --color-info-700: 135 236 242;
 
-  --color-text-main: 255 255 255;
-  --color-text-muted: 186 192 206;
-  --color-text-contrast: 25 30 38;
+  --color-text-main: 226 227 228;
+  --color-text-muted: 143 152 166;
+  --color-text-contrast: 18 26 39;
   --color-text-alt2: 255 255 255;
   --color-text-code: 240 141 199;
+  --color-text-headers: 226 227 228;
 
   --tw-ring-offset-color: #1f242e;
 }
