adding minor padding between title and badge

--- a/apps/web/src/app/vault/components/vault-items/vault-collection-row.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-collection-row.component.html
@@ -27,7 +27,7 @@
     queryParamsHandling="merge"
     appStopProp
   >
-    <span class="tw-flex-grow tw-truncate">{{ collection.name }}</span>
+    <span class="tw-truncate tw-mr-1">{{ collection.name }}</span>
     <div>
       <span
         *ngIf="collection.addAccess && collection.id !== Unassigned"
