add desktop css fix

--- a/libs/components/src/toast/toastr.css
+++ b/libs/components/src/toast/toastr.css
@@ -6,6 +6,9 @@
   all: unset;
   display: block;
   width: var(--bit-toast-width);
+
+  /* Needed to make hover states work in Electron, since the toast appears in the draggable region. */
+  -webkit-app-region: no-drag;
 }
 
 /* Disable hover styles */
