--- a/apps/web/src/app/admin-console/providers/verify-recover-delete-provider.component.html
+++ b/apps/web/src/app/admin-console/providers/verify-recover-delete-provider.component.html
@@ -1,7 +1,7 @@
 <form #form (ngSubmit)="submit()" [appApiAction]="formPromise" class="container" ngNativeValidate>
   <div class="row justify-content-md-center mt-5">
     <div class="col-5">
-      <p class="lead text-center mb-4">{{ "deleteAccount" | i18n }}</p>
+      <p class="lead text-center mb-4">{{ "deleteProvider" | i18n }}</p>
       <div class="card">
         <div class="card-body">
           <app-callout type="warning">{{ "deleteProviderWarning" | i18n }}</app-callout>
