resolve some pr comments

--- a/apps/web/src/app/admin-console/providers/verify-recover-delete-provider.component.html
+++ b/apps/web/src/app/admin-console/providers/verify-recover-delete-provider.component.html
@@ -16,7 +16,7 @@
               class="btn btn-danger btn-block btn-submit"
               [disabled]="form.loading"
             >
-              <span>{{ "deleteAccount" | i18n }}</span>
+              <span>{{ "deleteProvider" | i18n }}</span>
               <i
                 class="bwi bwi-spinner bwi-spin"
                 title="{{ 'loading' | i18n }}"
