remove ciphers when in a collection with both collections and ciphers and filtering by add access

--- a/apps/web/src/app/vault/components/vault-items/vault-items.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-items.component.html
@@ -100,7 +100,7 @@
           (onEvent)="event($event)"
         ></tr>
         <tr
-          *ngIf="item.cipher"
+          *ngIf="item.cipher && addAccessStatus !== 1"
           bitRow
           appVaultCipherRow
           alignContent="middle"
