--- a/bitwarden_license/bit-web/src/app/secrets-manager/integrations/integration-grid/integration-grid.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/integrations/integration-grid/integration-grid.component.html
@@ -7,6 +7,7 @@
       [linkText]="integration.linkText"
       [linkURL]="integration.linkURL"
       [image]="integration.image"
+      [imageDarkMode]="integration.imageDarkMode"
       [externalURL]="integration.type === 'sdk'"
       [newBadgeExpiration]="integration.newBadgeExpiration"
     ></sm-integration-card>
