refactor integration types to be an enum

--- a/bitwarden_license/bit-web/src/app/secrets-manager/integrations/integration-grid/integration-grid.component.html
+++ b/bitwarden_license/bit-web/src/app/secrets-manager/integrations/integration-grid/integration-grid.component.html
@@ -8,7 +8,7 @@
       [linkURL]="integration.linkURL"
       [image]="integration.image"
       [imageDarkMode]="integration.imageDarkMode"
-      [externalURL]="integration.type === 'sdk'"
+      [externalURL]="integration.type === IntegrationType.SDK"
       [newBadgeExpiration]="integration.newBadgeExpiration"
     ></sm-integration-card>
   </li>
