first pass at docs, minor markup cleanup

--- a/apps/browser/src/platform/popup/layout/popup-bottom-navigation.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-bottom-navigation.component.html
@@ -19,8 +19,9 @@
         <span
           class="tw-truncate tw-max-w-full"
           [ngClass]="!rla.isActive && 'group-hover:tw-underline'"
-          >{{ button.label }}</span
         >
+          {{ button.label }}
+        </span>
       </a>
     </div>
   </div>
