--- a/apps/browser/src/platform/popup/layout/popup-header.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-header.component.html
@@ -1,11 +1,15 @@
 <header class="tw-p-4 tw-border-0 tw-border-solid tw-border-b tw-border-secondary-300">
   <div class="tw-max-w-screen-sm tw-mx-auto tw-flex tw-justify-between">
     <div class="tw-inline-flex tw-items-center tw-gap-2 tw-h-9">
-      <button class="tw-bg-transparent tw-border-none" type="button" *ngIf="showBackButton">
+      <button
+        class="tw-bg-transparent tw-border-none tw-text-main"
+        type="button"
+        *ngIf="showBackButton"
+      >
         <!-- not the right icon -->
         <i class="bwi bwi-angle-left tw-font-bold" aria-hidden="true"></i>
       </button>
-      <h1 bitTypography="h3" class="tw-mb-0.5 tw-text-headers">{{ pageTitle }}</h1>
+      <h1 bitTypography="h3" class="!tw-mb-0.5 tw-text-headers">{{ pageTitle }}</h1>
     </div>
     <div class="tw-inline-flex tw-items-center tw-gap-2 tw-h-9">
       <ng-content select="[slot=end]"></ng-content>
