--- a/apps/browser/src/platform/popup/layout/popup-bottom-navigation.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-bottom-navigation.component.html
@@ -9,6 +9,7 @@
         routerLink="/{{ button.page }}"
         routerLinkActive
         #rla="routerLinkActive"
+        ariaCurrentWhenActive="page"
       >
         <i *ngIf="!rla.isActive" class="bwi bwi-lg bwi-{{ button.iconKey }}" aria-hidden="true"></i>
         <i
