--- a/apps/browser/src/platform/popup/layout/popup-header.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-header.component.html
@@ -5,6 +5,8 @@
         class="tw-bg-transparent tw-border-none tw-text-main"
         type="button"
         *ngIf="showBackButton"
+        title="Back"
+        aria-label="Back"
       >
         <!-- not the right icon -->
         <i class="bwi bwi-angle-left tw-font-bold" aria-hidden="true"></i>
