--- a/apps/browser/src/platform/popup/layout/popup-header.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-header.component.html
@@ -8,8 +8,7 @@
         title="Back"
         aria-label="Back"
       >
-        <!-- not the right icon -->
-        <i class="bwi bwi-angle-left tw-font-bold" aria-hidden="true"></i>
+        <i class="bwi bwi-back" aria-hidden="true"></i>
       </button>
       <h1 bitTypography="h3" class="!tw-mb-0.5 tw-text-headers">{{ pageTitle }}</h1>
     </div>
