fix items showing for toggling between orgs while add access filter is on

--- a/apps/web/src/app/vault/components/vault-items/vault-items.component.html
+++ b/apps/web/src/app/vault/components/vault-items/vault-items.component.html
@@ -104,7 +104,7 @@
           has filtered for collections with addAccess 
         -->
         <tr
-          *ngIf="item.cipher && addAccessStatus !== 1"
+          *ngIf="item.cipher && (!addAccessToggle || (addAccessToggle && addAccessStatus !== 1))"
           bitRow
           appVaultCipherRow
           alignContent="middle"
