--- a/apps/web/src/app/tools/reports/pages/reused-passwords-report.component.html
+++ b/apps/web/src/app/tools/reports/pages/reused-passwords-report.component.html
@@ -16,7 +16,7 @@
     </app-callout>
     <ng-container *ngIf="ciphers.length">
       <app-callout type="danger" title="{{ 'reusedPasswordsFound' | i18n }}">
-        {{ "reusedPasswordsFoundDesc" | i18n: (ciphers.length | number) }}
+        {{ "reusedPasswordsFoundReportDesc" | i18n: (ciphers.length | number) : vaultMsg }}
       </app-callout>
 
       <bit-toggle-group
@@ -27,7 +27,8 @@
       >
         <ng-container *ngFor="let status of filterStatus">
           <bit-toggle [value]="status">
-            {{ getOrgName(status) }}
+            {{ getOrgValues(status, "name") }}
+            <span bitBadge variant="info"> {{ getOrgValues(status, "count") }} </span>
           </bit-toggle>
         </ng-container>
       </bit-toggle-group>
