--- a/apps/web/src/app/tools/reports/pages/exposed-passwords-report.component.html
+++ b/apps/web/src/app/tools/reports/pages/exposed-passwords-report.component.html
@@ -11,7 +11,7 @@
     </app-callout>
     <ng-container *ngIf="ciphers.length">
       <app-callout type="danger" title="{{ 'exposedPasswordsFound' | i18n }}" [useAlertRole]="true">
-        {{ "exposedPasswordsFoundDesc" | i18n: (ciphers.length | number) }}
+        {{ "exposedPasswordsFoundReportDesc" | i18n: (ciphers.length | number) : vaultMsg }}
       </app-callout>
       <bit-toggle-group
         *ngIf="showFilterToggle && !isAdminConsoleActive"
@@ -21,7 +21,8 @@
       >
         <ng-container *ngFor="let status of filterStatus">
           <bit-toggle [value]="status">
-            {{ getOrgName(status) }}
+            {{ getOrgValues(status, "name") }}
+            <span bitBadge variant="info"> {{ getOrgValues(status, "count") }} </span>
           </bit-toggle>
         </ng-container>
       </bit-toggle-group>
