fix bug showing all items when a user filters and fixes an item in reports

--- a/apps/web/src/app/tools/reports/pages/exposed-passwords-report.component.html
+++ b/apps/web/src/app/tools/reports/pages/exposed-passwords-report.component.html
@@ -15,7 +15,7 @@
       </app-callout>
       <bit-toggle-group
         *ngIf="showFilterToggle && !isAdminConsoleActive"
-        [selected]="filterOrgStatus"
+        [selected]="filterOrgStatus$ | async"
         (selectedChange)="filterOrgToggle($event)"
         [attr.aria-label]="'addAccessFilter' | i18n"
       >
