--- a/apps/web/src/app/tools/reports/pages/inactive-two-factor-report.component.html
+++ b/apps/web/src/app/tools/reports/pages/inactive-two-factor-report.component.html
@@ -20,7 +20,7 @@
       </app-callout>
       <bit-toggle-group
         *ngIf="showFilterToggle && !isAdminConsoleActive"
-        [selected]="filterOrgStatus"
+        [selected]="filterOrgStatus$ | async"
         (selectedChange)="filterOrgToggle($event)"
         [attr.aria-label]="'addAccessFilter' | i18n"
       >
