--- a/apps/web/src/app/tools/reports/pages/unsecured-websites-report.component.html
+++ b/apps/web/src/app/tools/reports/pages/unsecured-websites-report.component.html
@@ -21,7 +21,7 @@
 
       <bit-toggle-group
         *ngIf="showFilterToggle && !isAdminConsoleActive"
-        [selected]="filterOrgStatus"
+        [selected]="filterOrgStatus$ | async"
         (selectedChange)="filterOrgToggle($event)"
         [attr.aria-label]="'addAccessFilter' | i18n"
       >
