--- a/apps/browser/src/platform/popup/layout/popup-bottom-navigation.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-bottom-navigation.component.html
@@ -1,9 +1,9 @@
-<footer class="tw-border-0 tw-border-solid tw-border-t tw-border-secondary-300">
+<footer class="tw-border-0 tw-border-solid tw-border-t tw-border-secondary-300 tw-bg-background">
   <div class="tw-max-w-screen-sm tw-mx-auto">
     <div class="tw-flex tw-flex-1">
       <a
         *ngFor="let button of navButtons"
-        class="tw-group tw-flex tw-flex-col tw-items-center tw-gap-1 tw-px-0.5 tw-pb-2 tw-pt-3 tw-w-1/4 hover:tw-text-primary-600 hover:tw-no-underline hover:tw-bg-primary-100 tw-border-2 tw-border-solid tw-border-transparent focus-visible:tw-rounded-lg focus-visible:tw-border-primary-500"
+        class="tw-group tw-flex tw-flex-col tw-items-center tw-gap-1 tw-px-0.5 tw-pb-2 tw-pt-3 tw-w-1/4 hover:tw-text-primary-600 tw-no-underline hover:tw-bg-primary-100 tw-border-2 tw-border-solid tw-border-transparent focus-visible:tw-rounded-lg focus-visible:tw-border-primary-500"
         [ngClass]="rla.isActive ? 'tw-font-bold tw-text-primary-600' : 'tw-text-muted'"
         title="{{ button.label }}"
         routerLink="/{{ button.page }}"
