--- a/apps/browser/src/platform/popup/layout/popup-header.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-header.component.html
@@ -1,5 +1,7 @@
-<header class="tw-p-4 tw-border-0 tw-border-solid tw-border-b tw-border-secondary-300">
-  <div class="tw-max-w-screen-sm tw-mx-auto tw-flex tw-justify-between">
+<header
+  class="tw-p-4 tw-border-0 tw-border-solid tw-border-b tw-border-secondary-300 tw-bg-background"
+>
+  <div class="tw-max-w-screen-sm tw-mx-auto tw-flex tw-justify-between tw-w-full">
     <div class="tw-inline-flex tw-items-center tw-gap-2 tw-h-9">
       <button
         class="tw-bg-transparent tw-border-none tw-text-main"
