--- a/libs/components/src/list/item.component.html
+++ b/libs/components/src/list/item.component.html
@@ -18,7 +18,7 @@
         <i *ngIf="iconStart" class="bwi tw-text-[1.75rem] tw-text-muted" [ngClass]="iconStart"></i>
         <ng-content></ng-content>
       </div>
-      <i *ngIf="iconEnd" class="bwi tw-text-2xl tw-text-main" [ngClass]="iconEnd"></i>
+      <i *ngIf="iconEnd" class="bwi tw-text-base tw-text-main" [ngClass]="iconEnd"></i>
     </button>
   </bit-item-action>
 
