restructure layout components to better match existing hierarchy

--- a/apps/browser/src/platform/popup/layout/popup-tab-navigation.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-tab-navigation.component.html
@@ -1,4 +1,5 @@
-<footer class="tw-border-0 tw-border-solid tw-border-t tw-border-secondary-300 tw-bg-background">
+<ng-content></ng-content>
+<footer class="tw-bg-background tw-border-0 tw-border-t tw-border-secondary-300 tw-border-solid">
   <div class="tw-max-w-screen-sm tw-mx-auto">
     <div class="tw-flex tw-flex-1">
       <a
