--- a/apps/browser/src/platform/popup/layout/popup-page.component.html
+++ b/apps/browser/src/platform/popup/layout/popup-page.component.html
@@ -1,5 +1,5 @@
 <ng-content select="[slot=header]"></ng-content>
-<main class="tw-bg-background-alt tw-p-3 tw-flex-1 tw-overflow-y-scroll">
+<main class="tw-bg-background-alt tw-p-3 tw-flex-1 tw-overflow-y-auto">
   <div class="tw-max-w-screen-sm tw-mx-auto">
     <ng-content></ng-content>
   </div>
